# IFJ2019

./: .gitignore  CMakeLists.txt  Doxyfile  LL.txt  Makefile  README.md  analyser.c  analyser.h  code-gen.c  code-gen.h  dynamic-stack.c  dynamic-stack.h  dynamic-string.c  dynamic-string.h  dynamic-symstack.c  dynamic-symstack.h  error.h  expression.c  expression.h  ifj2019.c  parser.c  parser.h  prg.out  rozdeleni  scanner.c  scanner.h  symtable.c  symtable.h  testovacie_vstupy_1.txt  testovacie_vstupy_2.txt  testovacie_vstupy_3.txt  testovacie_vstupy_4.txt
ifj2019.dSYM/Contents/: Info.plist
tests/: expression.c  lex1.py  lex2.py  lex3.py  lex4.py  lex5.py  parser.c  symstack_test.c  symstack_test.h  symtable_test.c  symtable_test.h  test0.py  test1.py  test2.py  test3.py  test5.py  test6.py  test7.py  test8.py  testovacie_vstupy_1.txt
